--- a/index.html
+++ b/index.html
@@ -1,24 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Landing Expert - Landing Pages que Convertem</title>
-    <meta name="description" content="Especialista em landing pages para pequenos negócios e infoprodutores. Páginas modernas, responsivas e focadas em conversão." />
-    <meta name="author" content="Landing Expert" />
+<head>
+  <title>Landing Expert - Suas Landing Pages</title>
+  <meta name="description" content="Especialista em landing pages para pequenos negócios e infoprodutores. Páginas modernas, responsivas e focadas em conversão.">
 
-    <meta property="og:title" content="Landing Expert - Landing Pages que Convertem" />
-    <meta property="og:description" content="Especialista em landing pages para pequenos negócios e infoprodutores. Páginas modernas, responsivas e focadas em conversão." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <!-- Open Graph -->
+  <meta property="og:title" content="Landing Expert - Suas Landing Pages">
+  <meta property="og:description" content="Especialista em landing pages modernas e focadas em conversão.">
+  <meta property="og:image" content="https://dina-sooty.vercel.app/preview.png">
+  <meta property="og:url" content="https://dina-sooty.vercel.app">
+  <meta property="og:type" content="website">
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
-
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
-</html>
+</head>
