feature/preview-image-url

--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
-<head>
-  <title>Landing Expert - Suas Landing Pages</title>
-  <meta name="description" content="Especialista em landing pages para pequenos negócios e infoprodutores. Páginas modernas, responsivas e focadas em conversão.">
-
-  <!-- Open Graph -->
-  <meta property="og:title" content="Landing Expert - Suas Landing Pages">
-  <meta property="og:description" content="Especialista em landing pages modernas e focadas em conversão.">
-  <meta property="og:image" content="https://dina-sooty.vercel.app/preview.png">
-  <meta property="og:url" content="https://dina-sooty.vercel.app">
-  <meta property="og:type" content="website">
-
-</head>
+<!DOCTYPE html>
+<html lang="pt-BR">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Landing Expert - Suas Landing Pages</title>
+    <meta name="description" content="Especialista em landing pages para pequenos negócios e infoprodutores. Páginas modernas, responsivas e focadas em conversão.">
+    
+    <!-- Open Graph -->
+    <meta property="og:title" content="Landing Expert - Suas Landing Pages">
+    <meta property="og:description" content="Especialista em landing pages modernas e focadas em conversão.">
+    <meta property="og:image" content="https://dina-sooty.vercel.app/preview.png">
+    <meta property="og:url" content="https://dina-sooty.vercel.app">
+    <meta property="og:type" content="website">
+  </head>
+  <body>
+    <div id="root"></div>
+  </body>
+</html>
