fix/preview-image-url

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Open Graph -->
     <meta property="og:title" content="Landing Expert - Suas Landing Pages">
     <meta property="og:description" content="Especialista em landing pages modernas e focadas em conversão.">
-    <meta property="og:image" content="https://dina-sooty.vercel.app/preview.png">
+    <meta property="og:image" content="/preview.png">
     <meta property="og:url" content="https://dina-sooty.vercel.app">
     <meta property="og:type" content="website">
   </head>
