--- a/index.html
+++ b/index.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Landing Expert - Suas Landing Pages</title>
-    <meta name="description" content="Especialista em landing pages para pequenos negócios e infoprodutores. Páginas modernas, responsivas e focadas em conversão.">
-    
-    <!-- Open Graph -->
-    <meta property="og:title" content="Landing Expert - Suas Landing Pages">
-    <meta property="og:description" content="Especialista em landing pages modernas e focadas em conversão.">
-    <meta property="og:image" content="/preview.png">
-    <meta property="og:url" content="https://dina-sooty.vercel.app">
-    <meta property="og:type" content="website">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Landing Expert</title>
+
+    <!-- SEO -->
+    <meta name="description" content="Landing Expert - Landing pages que vendem para pequenos negócios e infoprodutores." />
+    <meta name="author" content="Landing Expert" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="Landing Expert - Landing Pages que convertem" />
+    <meta property="og:description" content="Landing Expert - Landing Pages que convertem." />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="/preview.png" />
+
+    <!-- Twitter -->
+    <!-- <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@studio_belle" />
+    <meta name="twitter:image" content="/imagem-preview.png" /> -->
   </head>
+
   <body>
     <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
